--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <h2>@typography</h2>
     <h1> h1 is the biggest size tag </h1>
     <h2> h2 is the second biggest size tag</h2>
-    <pclass="para"> p is used to write normal stuff</p>
+    <p class="para"> p is used to write normal stuff, we will wrap this </p>
+    <p> this paragraph will have a <strong>bold text</strong> </p>
     <small> small makes the text relatively smaller</small>
 
     <hr>
