--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
     <hr>
     <h2>@containers</h2>
     <h3> fluid container </h3>
-    <div> a fluid container is a container that goes till the end of the page (left to right)</div>
+    <div class="container"> a fluid container is a container that goes till the end of the page (left to right)</div>
     <h3> centred container </h3>
-    <div> a centered container is a container that goes till the specifid width</div>
+    <div class="container container-center"> a centered container is a container that goes till the specifid width </div>
     <!-- <p> Note: don't just use div for everything, it's good for container otherwise its not good practice, its better to
         use the specified tag</p> -->
     <hr>
     <h2> @link </h2>
     <!-- <p> needless to say links are very important as the web is the web because of links from one page to another,we use
         a(anchor tag) with attribute href which contains the actual link</p> -->
-    <a href="/">(Primary Link idk what it means but ig we'll find out)</a>
-    <a href="/">(Seondary Link idk what it means either something about stuff you want user to click all the time v/s
-        sometimes</a>
+    <a href="/">Primary Link</a> 
+    <!-- idk what it means but ig we'll find out) -->
+    <a href="/">Seondary Link</a>
+    <!-- idk what it means either something about stuff you want user to click all the time v/s sometimes -->
     <hr>
     <h2> @lists </h2>
     <!-- <p> as mentioned before you can use div and more divs to make a container that holds text in list form but the
