--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <h2> @link </h2>
     <!-- <p> needless to say links are very important as the web is the web because of links from one page to another,we use
         a(anchor tag) with attribute href which contains the actual link</p> -->
-    <a href="/">Primary Link</a> 
+    <a class="link link-primary", href="/">Primary Link</a> 
     <!-- idk what it means but ig we'll find out) -->
-    <a href="/">Seondary Link</a>
+    <a class="link link-secondary", href="/">Seondary Link</a>
     <!-- idk what it means either something about stuff you want user to click all the time v/s sometimes -->
     <hr>
     <h2> @lists </h2>
