--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
     <hr>
     <h2> @lists </h2>
     <!-- <p> as mentioned before you can use div and more divs to make a container that holds text in list form but the
-        browser doesn't know its a list then smh</p> -->
-    <h3> unordered list(ul then li)</h3>
-    <ul>
+        browser doesn't know its a list then smh</p> ul then li -->
+    <h3 > unordered list</h3>
+    <ul class="list-non-bullet">
         <li> item 1</li>
         <li> item 2 </li>
         <li> item 3 </li>
     </ul>
     <!-- <h3> inline unordered list it doesn't look inline rn but w the help of css it will</h3> -->
-    <ul>
-        <li> item 1</li>
-        <li> item 2 </li>
-        <li> item 3 </li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline"> inline item 1</li>
+        <li class="list-item-inline"> inline item 2 </li>
+        <li class="list-item-inline"> inline item 3 </li>
     </ul>
     <h3> reverse ordered list(not reversed rn but w the help of css it will be</h3>
     <ol>
