--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
             color: red;
         }
     </style> -->
-     <!-- but most common way is to make a separate style sheet -->
-     <link href="styles.css" rel="stylesheet">
+    <!-- but most common way is to make a separate style sheet -->
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1 id="header" > yajat's Component Library</h1>
-    <!-- CSS METHOD 2 style="color:red" --> 
-   
-    <p class="para"> I am attending neog.camp and I want to make a portfolio website where I can house all my projects </p>
+    <h1 id="header"> yajat's Component Library</h1>
+    <!-- CSS METHOD 2 style="color:red" -->
+
+    <p class="para"> I am attending neog.camp and I want to make a portfolio website where I can house all my projects
+    </p>
     <hr>
     <h2>@typography</h2>
     <h1> h1 is the biggest size tag </h1>
@@ -34,22 +35,23 @@
     <h3> fluid container </h3>
     <div class="container"> a fluid container is a container that goes till the end of the page (left to right)</div>
     <h3> centred container </h3>
-    <div class="container container-center"> a centered container is a container that goes till the specifid width </div>
+    <div class="container container-center"> a centered container is a container that goes till the specifid width
+    </div>
     <!-- <p> Note: don't just use div for everything, it's good for container otherwise its not good practice, its better to
         use the specified tag</p> -->
     <hr>
     <h2> @link </h2>
     <!-- <p> needless to say links are very important as the web is the web because of links from one page to another,we use
         a(anchor tag) with attribute href which contains the actual link</p> -->
-    <a class="link link-primary", href="/">Primary Link</a> 
+    <a class="link link-primary" , href="/">Primary Link</a>
     <!-- idk what it means but ig we'll find out) -->
-    <a class="link link-secondary", href="/">Seondary Link</a>
+    <a class="link link-secondary" , href="/">Seondary Link</a>
     <!-- idk what it means either something about stuff you want user to click all the time v/s sometimes -->
     <hr>
     <h2> @lists </h2>
     <!-- <p> as mentioned before you can use div and more divs to make a container that holds text in list form but the
         browser doesn't know its a list then smh</p> ul then li -->
-    <h3 > unordered list</h3>
+    <h3> unordered list</h3>
     <ul class="list-non-bullet">
         <li> item 1</li>
         <li> item 2 </li>
@@ -62,7 +64,7 @@
         <li class="list-item-inline"> inline item 3 </li>
     </ul>
     <h3> reverse ordered list(not reversed rn but w the help of css it will be</h3>
-    <ol>
+    <ol reversed>
         <li> item 1</li>
         <li> item 2</li>
         <li> item 3</li>
@@ -70,22 +72,22 @@
     <hr>
     <!-- <p> nav is imp, there is nav tag on html, we use div to have the top left thing and then an unordered list w links
         to our other pages</p> -->
-    <nav>
-        <div> IAmDeveloper
-            <ul>
-                <li>
-                    <a href="/"> home</a>
-
-                </li>
-                <li><a href="/"> projects</a>
-                </li>
-                <li>
-                    <a href="/"> blogs</a>
-                </li>
+    <nav class="navigation container">
+        <div class="nav-brand"> IAmDeveloper </div>
+        <ul class="list-non-bullet nav-pills">
+                <li class="list-item-inline">
+                    <a class="link link-active" href="/"> home</a>
+                </li class="list-item-inline">
+                <li class="list-item-inline">
+                    <a class="link " href="/"> projects</a>
+                </li class="list-item-inline">
+                <li class="list-item-inline">
+                    <a class="link " href="/"> blogs</a>
+                </li class="list-item-inline">
 
 
             </ul>
-        </div>
+        
     </nav>
     <!-- <p> next up we have header photo(hero) using img tag(w src attribute) inside header tag </p>
     <p> also use undraw.co </p> -->
