--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
     </nav>
     <!-- <p> next up we have header photo(hero) using img tag(w src attribute) inside header tag </p>
     <p> also use undraw.co </p> -->
-    <header>
-        <img src="images/hero-image.svg" />
-        <h2> heading inside hero</h2>
+    <h2> @header</h2>
+    <header class="hero">
+        <img class="hero-image" src="images/hero-image.svg" />
+        <h1 class="hero-heading"> yajat gulati the <span class="heading-inverted">web developer</span> </h2>
 
     </header>
     <hr>
