--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
     <nav class="navigation container">
         <div class="nav-brand"> IAmDeveloper </div>
         <ul class="list-non-bullet nav-pills">
-                <li class="list-item-inline">
-                    <a class="link link-active" href="/"> home</a>
-                </li class="list-item-inline">
-                <li class="list-item-inline">
-                    <a class="link " href="/"> projects</a>
-                </li class="list-item-inline">
-                <li class="list-item-inline">
-                    <a class="link " href="/"> blogs</a>
-                </li class="list-item-inline">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/"> home</a>
+            </li class="list-item-inline">
+            <li class="list-item-inline">
+                <a class="link " href="/"> projects</a>
+            </li class="list-item-inline">
+            <li class="list-item-inline">
+                <a class="link " href="/"> blogs</a>
+            </li class="list-item-inline">
 
 
-            </ul>
-        
+        </ul>
+
     </nav>
     <!-- <p> next up we have header photo(hero) using img tag(w src attribute) inside header tag </p>
     <p> also use undraw.co </p> -->
@@ -95,18 +95,30 @@
     <header class="hero">
         <img class="hero-image" src="images/hero-image.svg" />
         <h1 class="hero-heading"> yajat gulati the <span class="heading-inverted">web developer</span> </h2>
+            <!-- span is like div but not block its inline -->
 
     </header>
     <hr>
     <h2> @sections </h2>
-    <section>
-        <h3>white section</h3>
-        <p class="para">this section has a white background </p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p class="para">this section has a white background </p>
+        </div>
     </section>
-    <section>
-        <h3>grey section</h3>
-        <p class="para">this section has a grey background </p>
+
+
+    <section class="section section-grey">
+        <div class="container container-center">
+            <h1>grey section</h1>
+            <p class="para">this section has a grey background </p>
+        </div>
+
+        
     </section>
+
+
+
     <!-- <p> and last but not least we have a footer, we dont use h1 h2 h3 in footer only div</p> -->
     <hr>
     <h2>@footer</h2>
