--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
     <!-- <p> and last but not least we have a footer, we dont use h1 h2 h3 in footer only div</p> -->
     <hr>
     <h2>@footer</h2>
-    <footer>
-        <div> some small heading inside footer</div>
-        <ul>
-            <li> socialOne </li>
-            <li> socialTwo </li>
-            <li> socialThree </li>
+    <footer class="footer">
+        <div class="footer-header"> some small heading inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class= "link"href="/" >socialOne</a>  </li>
+            <li class="list-item-inline"> 
+                <a class="link"href="/" >socialTwo</a> </li>
+            <li class="list-item-inline"> 
+                <a class="link"href="/" >socialThree</a></li>
         </uL>
     </footer>
 </body>
