projects page added

--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projects | yajatgulati</title>
+    <link href="/styles.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <nav class="navigation container">
+        <div class="nav-brand"> Yajat Gulati </div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link e" href="/"> home</a>
+            </li class="list-item-inline">
+            <li class="list-item-inline">
+                <a class="link link-active " href="/"> projects</a>
+            </li class="list-item-inline">
+            <li class="list-item-inline">
+                <a class="link " href="/"> blogs</a>
+            </li class="list-item-inline">
+
+
+        </ul>
+
+    </nav>
+    <header class="hero">
+        <h1 class="hero-heading"> see my <span class="heading-inverted">code</span></h1>
+    </header>
+
+    <ol inversed class="list-non-bullet">
+        <li>
+            <h1 class="project-heading">how well do you know me?</h1>
+            <small>10th June 2022</small>
+            <p>A CLI App built on <strong>NodeJS</strong> that I made to check which friend of mine really knows me!</p>
+            <a class="link link-primary projects-link" href="https://replit.com/@sheldor07/TheYajat-Quiz-markOne-assignment"> PLAY GAME</a>
+            <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-areyoumyfriendquiz"> VIEW SOURCE ON GITHUB</a>
+        </li>
+        <li>
+            <h1 class="project-heading">are you a Big Bang Theory fan?</h1>
+            <small>11th June 2022</small>
+            <p>Another CLI App built on <strong>NodeJS</strong> built as an assignment for neog.camp. It tests your knowledge on my favourite show of all time "The Big Bang Theory"</p>
+            <a class="link link-primary projects-link" href="https://replit.com/@sheldor07/Yajats-Big-Bang-Theory-Quiz-markOne-assignment?v=1"> PLAY GAME</a>
+            <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-areyouatbbtfanboy"> VIEW SOURCE ON GITHUB</a>
+        </li>
+    </ol>
+
 </body>
+
 </html>
