blogs listing + blogs
made a blogs listing page linked to dummy blog pages

--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,16 @@
             <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-areyouatbbtfanboy"> VIEW SOURCE ON GITHUB</a>
         </li>
     </ol>
+    <footer class="footer">
+        <div class="footer-header"> connect with me </div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class= "link link-primary"href="https://twitter.com/GulatiYajat" >Twitter</a>  </li>
+            <li class="list-item-inline"> 
+                <a class="link link-primary"href="https://github.com/sheldor07" >GitHub</a>  </li>
+            <li class="list-item-inline"> 
+                <a class="link link-primary"href="https://www.instagram.com/yajatgulati/" >Instagram</a></li>
+        </uL>
+    </footer>
 
 </body>
 
