updated nav with the correct links

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="nav-brand"> Yajat Gulati </div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/"> home</a>
+                <a class="link link-active" href="/index.html"> home</a>
             </li class="list-item-inline">
             <li class="list-item-inline">
-                <a class="link " href="/"> projects</a>
+                <a class="link " href="/projects.html"> projects</a>
             </li class="list-item-inline">
             <li class="list-item-inline">
-                <a class="link " href="/"> blogs</a>
+                <a class="link " href="/blogs.html"> blogs</a>
             </li class="list-item-inline">
 
 
