added minion speak project to projects page

--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,13 @@
             <a class="link link-primary projects-link" href="https://replit.com/@sheldor07/Yajats-Big-Bang-Theory-Quiz-markOne-assignment?v=1"> PLAY GAME</a>
             <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-areyouatbbtfanboy"> VIEW SOURCE ON GITHUB</a>
         </li>
+        <li>
+            <h1 class="project-heading">banana speak translator</h1>
+            <small>12th June 2022</small>
+            <p>Are you a fan of Minions? Well I built a GUI app using <strong>vanillaJS</strong> that uses the Minion Speak translator API to convert English to Minion Speak</p>
+            <a class="link link-primary projects-link" href="https://the-bananaspeak-translator.netlify.app/"> PLAY GAME</a>
+            <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-bananaspeak"> VIEW SOURCE ON GITHUB</a>
+        </li>
     </ol>
     <footer class="footer">
         <div class="footer-header"> connect with me </div>
