style changes css
removed bold in technologies and tried to align primary links on page 1

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <header class="hero">
         <img class="hero-image" src="images/hero-image.svg" />
         <h1 class="hero-heading"> yajat gulati the <span class="heading-inverted">web developer</span> </h2>
-            <!-- span is like div but not block its inline -->
+            
 
     </header>
    
     <section class="section section-grey">
         <div class="container container-center">
             <h1>technologies</h1>
-            <p class="para"><strong>I'm familiar with HTML5, CSS3, JavaScript, NodeJS and Web Hosting </strong></p>
+            <p class="para">I'm familiar with HTML5, CSS3, JavaScript, NodeJS and Web Hosting</p>
             
         </div>
 
