--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="section section-grey">
         <div class="container container-center">
             <h1>technologies</h1>
-            <p class="para"><strong>I'm familiar with HTML5, CSS3, JavaScript, NodeJS and Web Hosting </strong></p>
+            <p class="para">I'm familiar with HTML5, CSS3, JavaScript, NodeJS and Web Hosting</p>
             
         </div>
 
