pirate speak project added

--- a/projects.html
+++ b/projects.html
@@ -47,12 +47,17 @@
             <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-areyouatbbtfanboy"> VIEW SOURCE ON GITHUB</a>
         </li>
         <li>
-            <h1 class="project-heading">banana speak translator</h1>
+            <h1 class="project-heading">minionese</h1>
             <small>12th June 2022</small>
             <p>Are you a fan of Minions? Well I built a GUI app using <strong>vanillaJS</strong> that uses the Minion Speak translator API to convert English to Minion Speak</p>
             <a class="link link-primary projects-link" href="https://the-bananaspeak-translator.netlify.app/"> PLAY GAME</a>
             <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-bananaspeak"> VIEW SOURCE ON GITHUB</a>
         </li>
+        <h1 class="project-heading">pirate speak </h1>
+        <small>13th June 2022</small>
+        <p>Ever watched Pirates of the Carribean and wanted to talk like Captain Jack Sparrow? Well I built a GUI app using <strong>vanillaJS</strong> that uses the Pirate Speak translator API to convert English to Pirate Speak</p>
+        <a class="link link-primary projects-link" href="https://piratespeak-translator.netlify.app/"> PLAY GAME</a>
+        <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-piratespeak"> VIEW SOURCE ON GITHUB</a>
     </ol>
     <footer class="footer">
         <div class="footer-header"> connect with me </div>
