--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,13 @@
         <p>Ever watched Pirates of the Carribean and wanted to talk like Captain Jack Sparrow? Well I built a GUI app using <strong>vanillaJS</strong> that uses the Pirate Speak translator API to convert English to Pirate Speak</p>
         <a class="link link-primary projects-link" href="https://piratespeak-translator.netlify.app/"> PLAY GAME</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-piratespeak"> VIEW SOURCE ON GITHUB</a>
+        <li>
+            <h1 class="project-heading">emoji translator</h1>
+        <small>14th June 2022</small>
+        <p>Have your friends ever sent you an Emoji and you didn't know what it meant? Well I built a GUI app using <strong>ReactJS</strong> that could help you out</p>
+        <a class="link link-primary projects-link" href="https://gg3q1p.csb.app/"> PLAY GAME</a>
+        <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-emojipedia"> VIEW SOURCE ON GITHUB</a>
+        </li>
     </ol>
     <footer class="footer">
         <div class="footer-header"> connect with me </div>
