updated collider game project

--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,13 @@
         <a class="link link-primary projects-link" href="https://gg3q1p.csb.app/"> PLAY GAME</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-emojipedia"> VIEW SOURCE ON GITHUB</a>
         </li>
+        <li>
+            <h1 class="project-heading">2-D Collider Game</h1>
+        <small>15th Dec 2022</small>
+        <p>I have two friends who seemingly "hate" each other so I built a collider game where one of them has to avoid the other to win. I built it using<strong>Canvas and vanillaJS.</strong>Check it out!</p>
+        <a class="link link-primary projects-link" href="https://t.co/Uu19fpVfNt"> PLAY GAME</a>
+        <a class="link link-secondary projects-link" href="https://github.com/sheldor07/2d-collider-game"> VIEW SOURCE ON GITHUB</a>
+        </li>
     </ol>
     <footer class="footer">
         <div class="footer-header"> connect with me </div>
