removed blog section
also improved footer functionality to stay at bottom

--- a/blogs.html
+++ b/blogs.html
@@ -28,9 +28,9 @@
 
     </nav>
     <header class="hero">
-        <h1 class="hero-heading"> check out my <span class="heading-inverted">blogs</span></h1>
+        <h1 class="hero-heading"> Nothing to see here right now. <span class="heading-inverted">Come back later!</span></h1>
     </header>
-
+<!--
     <ol inversed class="list-non-bullet">
         <li>
             <article class="container-center">
@@ -91,6 +91,7 @@
         </li>
 
     </ol>
+-->
     <footer class="footer">
         <div class="footer-header"> connect with me </div>
         <ul class="social-links list-non-bullet">
