added piano link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container container-center">
             <h1>outside webdev</h1>
             <p class="para">Contrary to popular belief, I do have a life outside sitting on my laptop all day. I've been playing the piano since I was 6, you can find my covers on my Youtube Channel.</p>
-            <a href="/" class="link link-primary"> Hear Piano</a>
+            <a href="https://www.youtube.com/watch?v=_RCdv7LR294" class="link link-primary"> Hear Piano</a>
         </div>
     
 
