made project.html button mobile responsive and centred text on index

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         <div class="container container-center">
             <h1>projects</h1>
             <p class="para">I'm a big believer in the build in public movement, and hence like to showcase my projects which are hosted online </p>
-            <a href="projects.html" class="link link-primary"> See Projects</a>
+            <a href="projects.html" class="link link-primary link-section"> See Projects</a>
         </div>
     </section>
     <section class="section section-grey">
         <div class="container container-center">
             <h1>blogs</h1>
             <p class="para">I am also documenting my journey with web development, as well as, life through a blog</p>
-            <a href="blogs.html" class="link link-primary"> See Blogs</a>
+            <a href="blogs.html" class="link link-primary link-section "> See Blogs</a>
         </div>
     
 
@@ -62,7 +62,7 @@
         <div class="container container-center">
             <h1>outside webdev</h1>
             <p class="para">Contrary to popular belief, I do have a life outside sitting on my laptop all day. I've been playing the piano since I was 6, you can find my covers on my Youtube Channel.</p>
-            <a href="https://www.youtube.com/watch?v=_RCdv7LR294" class="link link-primary"> Hear Piano</a>
+            <a href="https://www.youtube.com/watch?v=_RCdv7LR294" class="link link-primary link-section"> Hear Piano</a>
         </div>
     
 
