changes link button on project to be responsive
Signed-off-by: sheldor07 <50955708+sheldor07@users.noreply.github.com>

--- a/projects.html
+++ b/projects.html
@@ -36,28 +36,28 @@
             <h1 class="project-heading">Taskify</h1>
         <small>19th Dec 2022</small>
         <p>I use online to-do lists a lot. So I built one using<strong>Bootstrap and jQuery.</strong>Check it out!</p>
-        <a class="link link-primary projects-link" href="https://todolist-taskify.netlify.app"> Website Link</a>
+        <a class="link link-primary projects-link" href="https://todolist-taskify.netlify.app">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/todolist"> VIEW SOURCE ON GITHUB</a>
         </li>
         <li>
             <h1 class="project-heading">2-D Collider Game</h1>
         <small>15th Dec 2022</small>
         <p>I have two friends who seemingly "hate" each other so I built a collider game where one of them has to avoid the other to win. I built it using<strong>Canvas and vanillaJS.</strong>Check it out!</p>
-        <a class="link link-primary projects-link" href="https://t.co/Uu19fpVfNt"> PLAY GAME</a>
+        <a class="link link-primary projects-link" href="https://t.co/Uu19fpVfNt">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/2d-collider-game"> VIEW SOURCE ON GITHUB</a>
         </li>
         <li>
             <h1 class="project-heading">emoji translator</h1>
         <small>14th June 2022</small>
         <p>Have your friends ever sent you an Emoji and you didn't know what it meant? Well I built a GUI app using <strong>ReactJS</strong> that could help you out</p>
-        <a class="link link-primary projects-link" href="https://gg3q1p.csb.app/"> PLAY GAME</a>
+        <a class="link link-primary projects-link" href="https://gg3q1p.csb.app/">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-emojipedia"> VIEW SOURCE ON GITHUB</a>
         </li>
         <li>
             <h1 class="project-heading">pirate speak </h1>
         <small>13th June 2022</small>
         <p>Ever watched Pirates of the Carribean and wanted to talk like Captain Jack Sparrow? Well I built a GUI app using <strong>vanillaJS</strong> that uses the Pirate Speak translator API to convert English to Pirate Speak</p>
-        <a class="link link-primary projects-link" href="https://piratespeak-translator.netlify.app/"> PLAY GAME</a>
+        <a class="link link-primary projects-link" href="https://piratespeak-translator.netlify.app/">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-piratespeak"> VIEW SOURCE ON GITHUB</a>
         
         </li>
@@ -65,7 +65,7 @@
             <h1 class="project-heading">minionese</h1>
             <small>12th June 2022</small>
             <p>Are you a fan of Minions? Well I built a GUI app using <strong>vanillaJS</strong> that uses the Minion Speak translator API to convert English to Minion Speak</p>
-            <a class="link link-primary projects-link" href="https://the-bananaspeak-translator.netlify.app/"> PLAY GAME</a>
+            <a class="link link-primary projects-link" href="https://the-bananaspeak-translator.netlify.app/">LINK</a>
             <a class="link link-secondary projects-link" href="https://github.com/sheldor07/yajatgulati-bananaspeak"> VIEW SOURCE ON GITHUB</a>
         </li>
         
