--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container container-center">
             <h1>blogs</h1>
             <p class="para">I am also documenting my journey with web development, as well as, life through a blog</p>
-            <a href="blogs.html" class="link link-primary link-section "> See Blogs</a>
+            <a href="blogs.html" class="link link-primary link-section link-blogs"> See Blog Posts</a>
         </div>
     
 
