--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
                 <a class="link link-active " href="/"> projects</a>
             </li class="list-item-inline">
             <li class="list-item-inline">
-                <a class="link " href="/"> blogs</a>
+                <a class="link " href="/blogs.html"> blogs</a>
             </li class="list-item-inline">
 
 
