added casino slots project
Signed-off-by: sheldor07 <50955708+sheldor07@users.noreply.github.com>

--- a/projects.html
+++ b/projects.html
@@ -32,17 +32,24 @@
     </header>
 
     <ol inversed class="list-non-bullet">
+        <li>
+            <h1 class="project-heading">Casino Royale</h1>
+        <small>23th Dec 2022</small>
+        <p>I built a casino-game slot machine using @keyframes in css and some cool tricks in JavaScript.Check it out!</p>
+        <a class="link link-primary projects-link" href="https://casino-royale-slots.netlify.app">LINK</a>
+        <a class="link link-secondary projects-link" href="https://github.com/sheldor07/slot-machine-game"> VIEW SOURCE ON GITHUB</a>
+        </li>
          <li>
             <h1 class="project-heading">Taskify</h1>
         <small>19th Dec 2022</small>
-        <p>I use online to-do lists a lot. So I built one using<strong>Bootstrap and jQuery.</strong>Check it out!</p>
+        <p>I use online to-do lists a lot. So I built one using<strong> Bootstrap and jQuery. </strong>Check it out!</p>
         <a class="link link-primary projects-link" href="https://todolist-taskify.netlify.app">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/todolist"> VIEW SOURCE ON GITHUB</a>
         </li>
         <li>
             <h1 class="project-heading">2-D Collider Game</h1>
         <small>15th Dec 2022</small>
-        <p>I have two friends who seemingly "hate" each other so I built a collider game where one of them has to avoid the other to win. I built it using<strong>Canvas and vanillaJS.</strong>Check it out!</p>
+        <p>I have two friends who seemingly "hate" each other so I built a collider game where one of them has to avoid the other to win. I built it using<strong> Canvas and vanillaJS. </strong>Check it out!</p>
         <a class="link link-primary projects-link" href="https://t.co/Uu19fpVfNt">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/2d-collider-game"> VIEW SOURCE ON GITHUB</a>
         </li>
