--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 
     <ol inversed class="list-non-bullet">
         <li>
-            <h1 class="project-heading">Casino Royale</h1>
+            <h1 class="project-heading">casino royale</h1>
         <small>23th Dec 2022</small>
         <p>I built a casino-game slot machine using @keyframes in css and some cool tricks in JavaScript.Check it out!</p>
         <a class="link link-primary projects-link" href="https://casino-royale-slots.netlify.app">LINK</a>
@@ -47,9 +47,9 @@
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/todolist"> VIEW SOURCE ON GITHUB</a>
         </li>
         <li>
-            <h1 class="project-heading">2-D Collider Game</h1>
+            <h1 class="project-heading">2-d collider game</h1>
         <small>15th Dec 2022</small>
-        <p>I have two friends who seemingly "hate" each other so I built a collider game where one of them has to avoid the other to win. I built it using<strong> Canvas and vanillaJS. </strong>Check it out!</p>
+        <p>I have two friends who seemingly "hate" each other so I built a collider game where one of them has to avoid the other to win. I built it using<strong> Canvas and vanillaJS.</strong>  (Hint: Press spacebar to move the avatar) Check it out!</p>
         <a class="link link-primary projects-link" href="https://t.co/Uu19fpVfNt">LINK</a>
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/2d-collider-game"> VIEW SOURCE ON GITHUB</a>
         </li>
