--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         <a class="link link-secondary projects-link" href="https://github.com/sheldor07/slot-machine-game"> VIEW SOURCE ON GITHUB</a>
         </li>
          <li>
-            <h1 class="project-heading">Taskify</h1>
+            <h1 class="project-heading">taskify</h1>
         <small>19th Dec 2022</small>
         <p>I use online to-do lists a lot. So I built one using<strong> Bootstrap and jQuery. </strong>Check it out!</p>
         <a class="link link-primary projects-link" href="https://todolist-taskify.netlify.app">LINK</a>
